# Video-Summarization-QA

./: .gitignore  README.md  pyproject.toml
api/: main.py
api/routes/: audio_routes.py
core/audio_pipeline/: audio_processing.py  inference.py  main_pipeline.py
core/rag_pipeline/: rag.py
tests/: test_data_ingestion.py  test_gcs_connection.py  test_transcribe.py
